--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <div class="blocks">
         <div class="exsite">
-            <img src="images/SAE-BDD.png" class="site_icon">
+            <img src="SAE-BDD.png" class="site_icon">
             <div class="title1">
               <a class="titre" href="https://basileadm.github.io/Exploitation-d-une-base-de-donn-e/"> SAE Base de donnée</a> 
             </div>  
@@ -22,7 +22,7 @@
     </div>
     <div class="blocks">
         <div class="exsite">
-            <img src="images/SAE-VM.png" class="site_icon">
+            <img src="SAE-VM.png" class="site_icon">
             <div class="title1">
               <a class="titre" href="https://basileadm.github.io/Instalation-d-une-machine-virtuelle/"> SAE Installation machine virtuelle</a> 
             </div>  
@@ -31,7 +31,7 @@
     <div class="site-container">
         <div class="blocks">
             <div class="exsite">
-                <img src="images/site.png" class="site_icon">
+                <img src="site.png" class="site_icon">
                 <div class="title1">
                   <a class="titre" href="https://basileadm.github.io/site.html/"> Mon premier site</a> 
                 </div>  
